--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_list_auto_scroll): Make 
+	autoscrolling work at the bottom of the screen.
+
 2005-05-26  Maciej Katafiasz  <email@mathrick.org>
 
 	* docs/reference/gtk/tmpl/gtkentry.sgml:
