--- a/po/ga.po
+++ b/po/ga.po
@@ -2,14 +2,15 @@
 # Copyright (C) 1999,2004 Free Software Foundation, Inc.
 # Seán Ó Ceallaigh <soc@users.sourceforge.net>, 1999.
 # Alastair McKinstry <mckinstry@computer.org>, 2004.
+# Alan Horkan, 2005. 
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gtk+ HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-08 02:01-0500\n"
-"PO-Revision-Date: 2004-03-21 21:48+0000\n"
-"Last-Translator: Alastair McKinstry <mckinstry@computer.org\n"
+"PO-Revision-Date: 2005-05-26 20:00+0000\n"
+"Last-Translator: Alan Horkan \n"
 "Language-Team: Gaeilge <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -797,35 +798,38 @@ msgid "Make X calls synchronous"
 msgstr ""
 
 #: gtk/gtkaboutdialog.c:260 gtk/gtkaboutdialog.c:1939
+#, fuzzy
 msgid "License"
-msgstr ""
+msgstr "Ceadunas"
 
 #: gtk/gtkaboutdialog.c:261
+#, fuzzy
 msgid "The license of the program"
-msgstr ""
+msgstr "An ceadunas atÃ¡ ag an ClÃ¡r"
 
 #. Add the credits button
 #: gtk/gtkaboutdialog.c:482
 msgid "_Credits"
-msgstr ""
+msgstr "_Buíochas"
 
 #. Add the license button
 #: gtk/gtkaboutdialog.c:491
+#, fuzzy
 msgid "_License"
-msgstr ""
+msgstr "_Ceadunas"
 
 #: gtk/gtkaboutdialog.c:682
 #, c-format
 msgid "About %s"
-msgstr ""
+msgstr "Faoi %s"
 
 #: gtk/gtkaboutdialog.c:1876
 msgid "Credits"
-msgstr ""
+msgstr "Buíochas"
 
 #: gtk/gtkaboutdialog.c:1901
 msgid "Written by"
-msgstr ""
+msgstr "Scríobh le"
 
 #: gtk/gtkaboutdialog.c:1904
 msgid "Documented by"
@@ -837,7 +841,7 @@ msgstr ""
 
 #: gtk/gtkaboutdialog.c:1920
 msgid "Artwork by"
-msgstr ""
+msgstr "Ealaín le"
 
 #. This is the text that should appear next to menu accelerators
 #. * that use the shift key. If the text on this key isn't typically
@@ -1006,9 +1010,8 @@ msgid "_Palette"
 msgstr "_Pailéid"
 
 #: gtk/gtkcolorsel.c:2054
-#, fuzzy
 msgid "Color Wheel"
-msgstr "Rothar"
+msgstr "Roth Dathanna"
 
 #: gtk/gtkcolorseldialog.c:123
 msgid "Color Selection"
@@ -1020,7 +1023,7 @@ msgstr "Roghnaigh _Gach Rud"
 
 #: gtk/gtkentry.c:4517 gtk/gtktextview.c:7040
 msgid "Input _Methods"
-msgstr ""
+msgstr "_Modhanna Ionchuir"
 
 #: gtk/gtkentry.c:4528 gtk/gtktextview.c:7051
 msgid "_Insert Unicode Control Character"
@@ -1035,7 +1038,7 @@ msgstr "Comhad neamhbhailí: %s"
 #: gtk/gtkfilechooserbutton.c:65
 #, fuzzy
 msgid "Select A File"
-msgstr "Dealaigh Comhad"
+msgstr "Pioc Comhad"
 
 #: gtk/gtkfilechooserbutton.c:66 gtk/gtkfilechooserdefault.c:1229
 #: gtk/gtkpathbar.c:982
@@ -1637,7 +1640,7 @@ msgstr "Claonadh Y"
 
 #: gtk/gtkinputdialog.c:567
 msgid "Wheel"
-msgstr "Rothar"
+msgstr "Roth"
 
 #: gtk/gtkinputdialog.c:607
 msgid "none"
@@ -1752,7 +1755,7 @@ msgstr "Ceist"
 #.
 #: gtk/gtkstock.c:294
 msgid "_About"
-msgstr ""
+msgstr "F_aoi"
 
 #: gtk/gtkstock.c:296
 msgid "_Apply"
@@ -1800,15 +1803,16 @@ msgstr ""
 
 #: gtk/gtkstock.c:307
 msgid "_Edit"
-msgstr ""
+msgstr "_Eagar"
 
 #: gtk/gtkstock.c:308
 msgid "_Find"
-msgstr "_Cuardaigh"
+msgstr "Cuardaigh"
 
 #: gtk/gtkstock.c:309
+#, fuzzy
 msgid "Find and _Replace"
-msgstr ""
+msgstr "Cuardaigh agus Athchuir"
 
 #: gtk/gtkstock.c:310
 msgid "_Floppy"
@@ -1819,16 +1823,18 @@ msgid "_Bottom"
 msgstr "_Bun"
 
 #: gtk/gtkstock.c:312
+#, fuzzy
 msgid "_First"
-msgstr ""
+msgstr "Cead"
 
 #: gtk/gtkstock.c:313
+#, fuzzy
 msgid "_Last"
-msgstr ""
+msgstr "Deireaneach"
 
 #: gtk/gtkstock.c:314
 msgid "_Top"
-msgstr ""
+msgstr "Barr"
 
 #: gtk/gtkstock.c:315
 msgid "_Back"
@@ -1875,16 +1881,18 @@ msgid "_Italic"
 msgstr "_Iodálach"
 
 #: gtk/gtkstock.c:326
+#, fuzzy
 msgid "_Jump to"
-msgstr ""
+msgstr "Leim chuig"
 
 #: gtk/gtkstock.c:327
 msgid "_Center"
 msgstr "Sa _Lár"
 
 #: gtk/gtkstock.c:328
+#, fuzzy
 msgid "_Fill"
-msgstr ""
+msgstr "Lion"
 
 #: gtk/gtkstock.c:329
 msgid "_Left"
@@ -1976,8 +1984,9 @@ msgid "_Redo"
 msgstr "_Athdeanamh"
 
 #: gtk/gtkstock.c:351
+#, fuzzy
 msgid "_Refresh"
-msgstr ""
+msgstr "Uraigh"
 
 #: gtk/gtkstock.c:353
 msgid "_Revert"
@@ -2016,8 +2025,9 @@ msgid "_Strikethrough"
 msgstr ""
 
 #: gtk/gtkstock.c:363
+#, fuzzy
 msgid "_Undelete"
-msgstr ""
+msgstr "Dídealaigh"
 
 #: gtk/gtkstock.c:364
 msgid "_Underline"
