--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* gtk/gtktextbtree.c (_gtk_text_btree_tag): Queue the 
 	redisplay after modifying the tag in the btree, otherwise 
 	we end up showing the old tags until the next redraw comes 
-	around.   (#143537, Gary Kramlich)
+	around.   (#143537, Gary Kramlich, Peter Wainwright)
 
 	* gtk/gtkcombobox.c (gtk_combo_box_list_auto_scroll): Make 
 	autoscrolling work at the bottom of the screen.
