--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-27  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2005-05-25  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
@@ -60,7 +64,7 @@
 
 	* en_GB.po: Updated British English translation.
 
-2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+2005-04-13  Iaki Larraaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
 
@@ -2975,11 +2979,7 @@ Thu May 29 09:46:26 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
 
 2002-12-20  Akira TAGOH  <tagoh@gnome.gr.jp>
 
-	* ja.po: Updated Japanese translation.
-
-2002-12-19  Artis Trops  <hornet@navigator.lv>
-
-	* lv.po: Updated Latvian translation.
+	* ja.po: Un translation.
 
 2002-12-18  Christian Rose  <menthos@menthos.com>
 
