--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-27  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po:
+	- translation updated
+
 2005-05-27  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
