update nepali tranlsation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-29  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated nepali Translation
+
 2005-05-27  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po:
