--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-29  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali translation
+
 2005-05-27  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
