--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-04  Tor Lillqvist  <tml@novell.com>
+
+	* modules/engines/ms-windows/msw_style.c: Render insensitive icons
+	in a way that more closely matches Windows. (#305986, Tim Evans).
+
+	* modules/engines/ms-windows/Makefile.am (LDADDS): Link with
+	gdk-pixbuf.
+
 2005-05-26  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktextbtree.c (_gtk_text_btree_tag): Queue the 
