--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gtk/gtkfilechooserbutton.c: (update_label_and_image):
+	Plug a leak. Closes bug #306754.
+
 2005-06-03  Dom Lachowicz <cinamod@hotmail.com>
 
 	Merge from HEAD:
