--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilesystem.c (gtk_file_info_get_display_key): Use
+	g_utf8_collate_key_for_filename().
+
 2005-06-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gtk/gtkfilechooserbutton.c: (update_label_and_image):
