--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-08  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-05-18  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
