--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_real_start_interactive_search): 
+	Don't crash if search_window is NULL.  (#304914, Victor Osadci,
+	testcase by Olaf Vitters)
+
 2005-06-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gtk/gtkfilechooserbutton.c: (update_label_and_image):
