--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-08  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreemodel.c (gtk_tree_path_new_from_string): Check for
+	negative before appending the index, to avoid double error
+	message.  (#306393, Morten Welinder)
+
 	* gtk/gtktreeview.c (gtk_tree_view_real_start_interactive_search): 
 	Don't crash if search_window is NULL.  (#304914, Victor Osadci,
 	testcase by Olaf Vitters)
