--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkwindow-x11.c: Small markup fixes.
+
 	* gtk/gtk.symbols: 
 	* gtk/gtkiconview.h: 
 	* gtk/gtkiconview.c (gtk_icon_view_scroll_to_path): New function
