--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkdnd-x11.c (motif_drop_start, xdnd_drop_filter): Update
+	the user time on the window when a drop happens.  (#169364, Alexander
+	Hunziker, patch by Elijah Newren)
+
 	* gdk/x11/gdkwindow-x11.c: Small markup fixes.
 
 	* gtk/gtk.symbols: 
