--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkdnd-x11.c (motif_drop_start, xdnd_drop_filter): Update
+	the user time on the window when a drop happens.  (#169364, Alexander
+	Hunziker, patch by Elijah Newren)
+
 2005-06-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktreemodel.c (gtk_tree_path_new_from_string): Check for
