--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkwindow-x11.c: Small markup fixes.
+
 	* gtk/gtkwidget.c (gtk_widget_set_app_paintable): Add docs.
 	(#306212, Steve Chaplin, docs provided by Billy Biggs)
 
