--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-06-10  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_expand): 
+	* gtk/gtktoolbar.c (gtk_toolbar_get_show_arrow): 
+	* gtk/gtktextview.c (gtk_text_view_get_iter_at_position): 
+	* gtk/gtkstock.c (gtk_stock_set_translate_func): 
+	* gtk/gtkspinbutton.c (gtk_spin_button_get_adjustment): 
+	* gtk/gtkscrolledwindow.h: 
+	* gtk/gtkmenushell.c (gtk_menu_shell_get_take_focus): 
+
 	* gtk/gtkiconview.c (gtk_icon_view_set_margin): 
 	* gtk/gtkicontheme.c (gtk_icon_info_load_icon): 
 	* gtk/gtkcalendar.c (gtk_calendar_thaw): Doc fixes.
