--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* POTFILES.in: Add gdk/keyname-table.h
+
 2005-06-08  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
