--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-10  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-06-10  Matthias Clasen  <mclasen@redhat.com>
 
 	* POTFILES.in: Add gdk/keyname-table.h
