--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates
+
 2005-06-09  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes #162358:
